[project]
name = "img-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.15",
    "mcp>=1.7.1",
    "minio>=7.2.15",
    "playwright>=1.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
img-gen = "img_generation:img_generation"


